fix: исправить баги в коде и тестах, рефакторинг кода